--- a/.vim/coc-settings.json
+++ b/.vim/coc-settings.json
@@ -1,50 +1,86 @@
 {
-  "suggest.labelMaxLength": 60,
-  "suggest.completionItemKindLabels":{
+  "suggest.labelMaxLength": 80,
+  "suggest.completionItemKindLabels": {
+    "keyword": "\uf1de",
+    "variable": "\ue79b",
+    "value": "\uf89f",
+    "operator": "\u03a8",
+    "constructor": "\uf0ad",
+    "function": "\u0192",
+    "reference": "\ufa46",
+    "constant": "\uf8fe",
+    "method": "\uf09a",
+    "struct": "\ufb44",
     "class": "\uf0e8",
-    "color": "\ue22b"
+    "interface": "\uf417",
+    "text": "\ue612",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "module": "\uf40d",
+    "color": "\ue22b",
+    "property": "\ue624",
+    "field": "\uf9be",
+    "unit": "\uf475",
+    "event": "\ufacd",
+    "file": "\uf723",
+    "folder": "\uf114",
+    "snippet": "\ue60b",
+    "typeParameter": "\uf728",
+    "default": "\uf29c"
   },
+  "coc.preferences.extensionUpdateCheck": "weekly",
+  "coc.preferences.formatOnSaveFiletypes": [
+    "json",
+    "c",
+    "cpp",
+    "css",
+    "markdown"
+  ],
   "cmake.formatter": "cmake-format",
-  "languageserver":{
-    "ccls":{ 
+  "languageserver": {
+    "ccls": {
       "command": "ccls",
       "filetypes": ["c", "cc", "cpp", "c++", "objc", "objcpp"],
-      "rootPatterns": [".ccls", "compile_commands.json", ".git/", ".hg/", ".vscode/"],
+      "rootPatterns": [
+        ".ccls",
+        "compile_commands.json",
+        ".git/",
+        ".hg/",
+        ".vscode/"
+      ],
       "initializationOptions": {
-		"highlight": {"isRanges": true},
+        "highlight": { "isRanges": true },
         "cache": {
           "directory": "/tmp/ccls"
         },
-		"clang": {
-			"resourceDir": "/usr/lib/clang/10.0.0"
-		},
-		"completion": {
-			"detailedLable": true,
-			"placeholer": true
-		},
-		"index": {
-			"onChange": false,
-			"initialNoLinkage": true,
-			"threads": 2
-		},
-		"compilationDatabaseDirectory": "./.vscode/"
+        "clang": {
+          "resourceDir": "/usr/lib/clang/10.0.0"
+        },
+        "completion": {
+          "detailedLable": true,
+          "placeholer": true
+        },
+        "index": {
+          "onChange": false,
+          "initialNoLinkage": true,
+          "threads": 2
+        },
+        "compilationDatabaseDirectory": "./.vscode/"
       }
     },
     "cmake": {
       "command": "cmake-language-server",
       "filetypes": ["cmake"],
-      "rootPatterns": [
-        "build/"
-      ],
+      "rootPatterns": ["build/"],
       "initializationOptions": {
-          "buildDirectory": "build"
+        "buildDirectory": "build"
       }
     },
-	"bash": {
-		"command": "bash-language-server",
-		"args": ["start"],
-		"filetypes": [".sh"],
-		"ignoredRootPaths": ["~"]
-	}
+    "bash": {
+      "command": "bash-language-server",
+      "args": ["start"],
+      "filetypes": [".sh"],
+      "ignoredRootPaths": ["~"]
+    }
   }
 }
