--- a/.tmux.conf
+++ b/.tmux.conf
@@ -121,7 +121,7 @@ bind P if-shell "[ \"$(tmux show-options -g prefix)\" = \"prefix C-a\" ]" '\
 
 #### color (Solarized 256)
 # set -g mode-style "fg=default,bg=default,reverse"
-# set -g status-style bg=colour235,fg=colour136
+set -g status-style bg=colour235,fg=colour136
 # setw -g window-status-style fg=colour244
 # setw -g window-status-current-style fg=colour166
 # setw -g window-status-activity-style fg=colour61
