add lg for short "git log" and beautify

--- a/.gitconfig
+++ b/.gitconfig
@@ -1,3 +1,5 @@
 [user]
 	email = 2985122798@qq.com
 	name = SourVoice
+[alias]
+  	lg = log --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit --date=relative
